# routes/api.php
@@ -6,4 +6,5 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('api.key')->group(function (): void {
     Route::post('/pdfs/compress', [PdfController::class, 'compress'])->name('api.pdfs.compress');
     Route::post('/pdfs/watermark-compress', [PdfController::class, 'watermarkAndCompress'])->name('api.pdfs.watermark-compress');
+    Route::post('/pdfs/extract-pages', [PdfController::class, 'extractPages'])->name('api.pdfs.extract-pages');
 });
